--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,11 +20,14 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
+          <li class="fork"><a href="{{ site.github.repository_url }}">Home</a></li>
           {% if site.show_downloads %}
-            <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
-            <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
-            <li class="title">DOWNLOADS</li>
+            <li class="different section"><a href="{{ site.github.zip_url }}">Project</a></li>
+            <li class="different section"><a href="{{ site.github.tar_url }}">Design</a></li>
+            <li class="different section"><a href="{{ site.github.tar_url }}">Experiments</a></li>
+            <li class="different section"><a href="{{ site.github.tar_url }}">Team</a></li>
+            <li class="different section"><a href="{{ site.github.tar_url }}">Sponsor</a></li>
+            <li class="title">Molecular Muscle</li>
           {% endif %}
         </nav>
       </div><!-- end header -->
@@ -37,7 +40,7 @@
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <hr>
           <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+          #<span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
         {{ content }}
