--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -159,7 +159,7 @@ dt {
   left:0;
   top: 0px;
   height: 60px;
-  width: 100%;
+  width: 70
   position: fixed;
   background: url(../images/nav-bg.gif) #353535;
   border-bottom: 4px solid #434343;
@@ -169,7 +169,7 @@ dt {
     max-width: 650px;
     margin: 0 auto;
     padding: 0 10px;
-    background: blue;
+    background: #353535;
     margin: 6px auto;
 
     li {
